# thesis_fw_monitoring_tool

./: CMakeLists.txt  README.md  prj.conf  sysbuild.cmake
include/: critical.h  packet.h
include/driver/: usb.h
include/libs/: compact_fifo.h  compact_fifo_mutex.h
remote/: CMakeLists.txt  prj.conf
remote/include/: packet.h
remote/include/driver/: radio.h
remote/include/libs/: compact_fifo.h  compact_fifo_mutex.h
remote/include/settings/: settings.h
remote/src/: main.c
remote/src/driver/: CMakeLists.txt  radio.c
remote/src/libs/: compact_fifo.c  compact_fifo_mutex.c
remote/src/settings/: CMakeLists.txt  settings.c
src/: main.c
src/driver/: CMakeLists.txt  usb.c
src/libs/: CMakeLists.txt  compact_fifo.c  compact_fifo_mutex.c
